<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.rahul.bankregistration.model.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="37dp"
            android:layout_height="47dp"
            android:text="@string/s"
            android:textAlignment="center"
            android:textColor="#ea6451"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="278dp"
            android:layout_height="56dp"
            android:layout_marginBottom="92dp"
            android:text="@string/first_of_the_few_steps_to_set_you_up_with_a_bank_account"
            android:textColorLink="#0F0E0E"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/et_pan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pan_number"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/et_pan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.884" />

        <EditText
            android:id="@+id/et_pan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="252dp"
            android:layout_marginBottom="418dp"
            android:hint="@string/enter_pan_number"
            android:background="@drawable/edit_text_border"
            android:text="@={viewModel.pan}"
            app:borderColor="@{viewModel.isPanValid}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_birthdate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/birthdate"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pan" />

        <EditText
            android:id="@+id/et_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/dd"
            android:inputType="number"
            android:background="@drawable/edit_text_border"
            android:text="@={viewModel.day}"
            app:borderColor="@{viewModel.isBirthdateValid}"
            app:layout_constraintEnd_toStartOf="@id/et_month"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birthdate_label" />

        <EditText
            android:id="@+id/et_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/mm"
            android:inputType="number"
            android:background="@drawable/edit_text_border"
            android:text="@={viewModel.month}"
            app:borderColor="@{viewModel.isBirthdateValid}"
            app:layout_constraintEnd_toStartOf="@id/et_year"
            app:layout_constraintStart_toEndOf="@id/et_day"
            app:layout_constraintTop_toBottomOf="@id/tv_birthdate_label" />

        <EditText
            android:id="@+id/et_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/yyyy"
            android:inputType="number"
            android:background="@drawable/edit_text_border"
            android:text="@={viewModel.year}"
            app:borderColor="@{viewModel.isBirthdateValid}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_month"
            app:layout_constraintTop_toBottomOf="@id/tv_birthdate_label" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/providing_pan_and_date_of_birth_helps_us_find_and_fetch_your_kyc_from_a_central_registry_by_the_government_of_india_learn_more"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_month"
            app:layout_constraintVertical_bias="0.73" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"
            android:enabled="@{viewModel.isFormValid}"
            android:onClick="@{() -> viewModel.onNextClicked()}"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_year" />

        <TextView
            android:id="@+id/tv_no_pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.onNoPanClicked()}"
            android:text="@string/i_don_t_have_a_pan"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
